# randtoolbox

./: DESCRIPTION  LICENCE  LICENSE  MD5  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win
R/: binary-operator.R  pseudoRNG.R  qmc.R  quasiRNG.R  randgen.R  randtoolboxEnv.R  rngWELLScriptR.R  runifInterface.R  sobol-basic.R  testRNG.R  testrng.R  version.R  zzz.R
inst/: CITATION  NEWS
inst/doc/: Makefile  Sweave.sh  fullpres.R  fullpres.Rnw  randtoolbox.Rnw  randtoolbox.bib  shortintro.R  shortintro.Rnw
inst/doc/src/: fullpres.Rnw  shortintro.Rnw
man/: aux.Rd  auxfun.Rd  colltest.Rd  colltestsparse.Rd  freqtest.Rd  gaptest.Rd  get.primes.Rd  getWELLState.Rd  ordertest.Rd  overall-doc.Rd  pokertest.Rd  pseudoRNG.Rd  quasiRNG.Rd  randgen.Rd  rngWELLScriptR.Rd  runifInterface.Rd  serialtest.Rd  sobol-test-func.Rd  testrng.Rd
src/: LowDiscrepancy-halton.c  LowDiscrepancy-halton.h  LowDiscrepancy-sobol-orig1111.c  LowDiscrepancy-sobol-orig1111.h  LowDiscrepancy-sobol.c  LowDiscrepancy-sobol.h  LowDiscrepancy.f  LowDiscrepancy.s  Makevars  SFMT-alti.h  SFMT-params.h  SFMT-params607.h  SFMT-sse2-11213-1.h  SFMT-sse2-1279-1.h  SFMT-sse2-132049-1.h  SFMT-sse2-19937-1.h  SFMT-sse2-216091-1.h  SFMT-sse2-2281-1.h  SFMT-sse2-4253-1.h  SFMT-sse2-44497-1.h  SFMT-sse2-607-1.h  SFMT-sse2-607-10.h  SFMT-sse2-607-11.h  SFMT-sse2-607-12.h  SFMT-sse2-607-13.h  SFMT-sse2-607-14.h  SFMT-sse2-607-15.h  SFMT-sse2-607-16.h  SFMT-sse2-607-17.h  SFMT-sse2-607-18.h  SFMT-sse2-607-19.h  SFMT-sse2-607-2.h  SFMT-sse2-607-20.h  SFMT-sse2-607-21.h  SFMT-sse2-607-22.h  SFMT-sse2-607-23.h  SFMT-sse2-607-24.h  SFMT-sse2-607-25.h  SFMT-sse2-607-26.h  SFMT-sse2-607-27.h  (+85 more)
tests/: test-Halton.R  test-SFMT.R  test-Stirling.R  test-binary-op.R  test-knuthTAOCP.R  test-mjrec.R  test-parallel-qmc.R  test-permut.R  test-runifInterface-LCG.R  test-runifInterface-MT19937.R  test-runifInterface-nonLCG.R  test-sobol-Ccode.R  test-sobol-basic.R  test-sobol-scram.R  test-sobol.V.R  test-sobol.directions.R  testHalton.R  testSobol.R  testStirling.R  testTorus.R
vignettes/: .Rinstignore  fullpres.Rnw  randtoolbox.bib  shortintro.Rnw
